--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -180,9 +180,9 @@ if(passwordHideShow)
     // password hide-show js
     script(src="../../assets/js/password-hide-show.js")
 
-if(passwordHide)
+if(passwordHideShowLogin)
     // password hide js 
-    script(src="../../assets/js/password-hide.js")
+    script(src="../../assets/js/password-hide-show-login.js")
 
 if(confirmPassword)
     // confirm password js 
