--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -167,7 +167,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Erin M. Baker
                                 span.text-content Feb 6,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Mobile App Development
                             p(class="text-content") Mobile Simple log in – logging in to your website is easy
@@ -177,7 +177,7 @@ html(lang='en')
                             div.divider.w-full
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 8k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -192,7 +192,7 @@ html(lang='en')
                                 a(href="blog-grid.html") 
                                   p.text-title.font-bold(class="dark:text-white") Amy A. Servants
                                 span.text-content Feb 2,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Laptop and coffee
                             p(class="text-content") This image captures the quintessential work setup - a laptop and a coffee cup.
@@ -202,7 +202,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 2k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -217,7 +217,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Jackie M. Martin
                                 span.text-content Jan 30,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div
                             h5(class="mb-2 font-bold dark:text-white") Publish Policy 
                             p(class="text-content") The new rules(DSA)
@@ -227,7 +227,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 12k views 
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -242,7 +242,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Mary S. Jelks
                                 span.text-content Jan 25,2023  
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Revolutionizing Startups
                             p(class="text-content") The image showcases the critical successful startup, 
@@ -252,7 +252,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 25k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -267,7 +267,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Katherine W. McWilliams  
                                 span.text-content Jan 5,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Cozy Workspace
                             p(class="text-content")  AThe image is designed to convey a sense of comfort and warmth, 
@@ -277,7 +277,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 18k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -292,7 +292,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Effie J. Frazier 
                                 span.text-content Jan 1,2023
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") The Biggest Lie In The Code 
                             p(class="text-content")  I think programming plays a huge role in our lives,
@@ -302,7 +302,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 6k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -317,7 +317,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Anna G. Proas  
                                 span.text-content Dec 31, 2022
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Old School Coded 
                             p(class="text-content")  In particular I learned about our mental and physical limits,
@@ -327,7 +327,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 25k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -342,7 +342,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Ronald M. Spelean  
                                 span.text-content Dec 27, 2022 
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Content Management System 
                             p(class="text-content")  Your ecommerce website comes with a content management 
@@ -352,7 +352,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 7k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
                     li.col-span-4.product-box(class="2lg:col-span-6 sm:col-span-12 masonryItem")  
                       div.card.p-0.group
                         div.blog-img.overflow-hidden(class="rounded-tr-[0.625rem] rounded-tl-[0.625rem]")
@@ -367,7 +367,7 @@ html(lang='en')
                                 a(href="blog-grid.html")
                                   p.text-title.font-bold(class="dark:text-white") Shannon T. Clemons    
                                 span.text-content Dec 5, 2022
-                            i(data-feather="more-vertical" class="h-5 stroke-content cursor-pointer")
+                            i(data-feather="more-vertical" class="h-5 cursor-pointer stroke-content")
                           div 
                             h5(class="mb-2 font-bold dark:text-white") Myths About Code
                             p(class="text-content")  No! All of the paragraphs in the  are written by humans,
@@ -377,7 +377,7 @@ html(lang='en')
                             div.divider.w-full 
                             div.flex.items-center.justify-between.mt-3.post-media
                               span(class="text-content") 28k views
-                              i(data-feather="heart" class="h-5 stroke-secondary wish-like")
+                              i(data-feather="heart" class="h-5 cursor-pointer stroke-secondary wish-like")
 
 
         // Page Body End 
