--- a/assets/pug/pages/template/coming-soon.pug
+++ b/assets/pug/pages/template/coming-soon.pug
@@ -19,7 +19,7 @@ html(lang='en')
               form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="index.html")
                 h3 Coming Soon!!
                 p(class="!mb-4") We're working hard to give you the best experience!
-                div.flex.justify-center(class="mb-[20px]")
+                div.flex.justify-center(class="mb-4 md:mb-3 sm:mb-2")
                   div.p-4(class="sm:p-2")
                     ul.timer.countdown-6.flex.flex-wrap(class="gap-5 3xl:gap-3")
                       li
@@ -36,7 +36,7 @@ html(lang='en')
                         span.timer-label Sec
                 div
                   input(type="email" placeholder="Enter your id" required)
-                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg !mt-2 !mb-3") Notify Me
+                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg !mt-2 md:!mt-1 mb:!mt-0 !mb-3") Notify Me
                 div.flex.items-center.gap-1
                   i(data-feather="chevrons-left" class="w-5 h-5 stroke-primary")
                   a(href="index.html")  Back
