--- a/assets/pug/pages/template/form-validation.pug
+++ b/assets/pug/pages/template/form-validation.pug
@@ -68,12 +68,11 @@ html(lang='en')
                             input(type='email' id="email1" placeholder='Enter your email id' required='')
                           div
                             label(for='password2') Password
-                            div.relative
-                              input(type='password' id="password2" required='' placeholder="Enter your Password")
+                            div.relative  
+                              input(type='password' id="password" name='Newpassword' required='' placeholder="New password")
                               div.password-icon
-                                i(data-feather="eye" class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                i(data-feather="eye-off" class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-
+                                i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ") 
+                                i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ")
                           div.flex.justify-end.items-center
                             button.btn.btn-primary.text-white.text-xs.font-semibold(type='submit' class="py-2 !m-0 !w-fit") Submit
                     div(data-tabContent="2" class="relative tab-pan copyParent group ")
@@ -88,11 +87,11 @@ html(lang='en')
                           |          &lt;input type="email" id="email1" placeholder='Enter your email id' required=''&gt;&lt;/input&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div class="relative"&gt;
-                          |          &lt;label for="password2&gt;Password&lt;/label&gt; 
-                          |          &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
+                          |          &lt;label for="password&gt;Password&lt;/label&gt; 
+                          |          &lt;input type="text" id="password" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
                           |          &lt;div class="password-icon"&gt;
-                          |             &lt;i data-feather="eye" class="feather-eye2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
-                          |             &lt;i data-feather="eye-off" class="feather-eye-off2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                          |             &lt;i data-feather="eye" class="feather-eye  cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                          |             &lt;i data-feather="eye-off" class="feather-eye-off  cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
                           |          &lt;/div&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div class="flex items-center justify-end"&gt;
@@ -268,12 +267,13 @@ html(lang='en')
                               div
                                 label(for="name") Username 
                                 input(type="text" id="name" placeholder="Enter your username" required)
-                              label(for="password") Password 
-                              div.relative
-                                input(type='password' id="password" required='' placeholder="Enter your Password")
-                                div.password-icon
-                                  i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
-                                  i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 ").showHidePassword 
+                              div
+                                label(for='password') Password
+                                div.relative
+                                  input(type='password' id="password2" name='Confirmpassword' required='' placeholder="Confirm password")
+                                  div.password-icon 
+                                    i(data-feather="eye" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2" for="password2") 
+                                    i(data-feather="eye-off" class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2" for="password2")
                               div.btns.flex.justify-end.items-center.gap-3
                                 button.text-xs.btn.btn-secondary.text-white.py-2.prev-2.prev(class="!w-fit !m-0") Previous
                                 button.text-xs.btn.btn-primary.text-white.py-2.submit(class="!w-fit !m-0") Submit
@@ -353,8 +353,8 @@ html(lang='en')
                           |           &lt;div class="relative"&gt;
                           |               &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
                           |               &lt;div class="password-icon"&gt;
-                          |                  &lt;i data-feather="eye" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
-                          |                  &lt;i data-feather="eye-off" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                          |                  &lt;i data-feather="eye" class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                          |                  &lt;i data-feather="eye-off" class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
                           |               &lt;/div&gt; 
                           |           &lt;/div&gt;
                           |               &lt;div class="flex items-center justify-end"&gt;
