--- a/assets/pug/pages/template/login.pug
+++ b/assets/pug/pages/template/login.pug
@@ -8,8 +8,8 @@
 //- fontawesome
 -var fontAwesome=true;
 
-//- passwordHideShow
--var passwordHideShow=true; 
+//- passwordHideShowLogin
+-var passwordHideShowLogin=true; 
 
 doctype html
 html(lang='en') 
