--- a/assets/pug/pages/template/register.pug
+++ b/assets/pug/pages/template/register.pug
@@ -8,8 +8,8 @@
 //- fontawesome
 -var fontAwesome=true;
 
-//- passwordHideShow
--var passwordHideShow=true;
+//- passwordHideShowLogin
+-var passwordHideShowLogin=true;
 
 doctype html
 html(lang='en')
@@ -40,7 +40,7 @@ html(lang='en')
                                         div.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
                                             i(data-feather="check")
                                     span(class="!text-title") Accept terms & condition
-                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg") Sign Up
+                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg md:!my-2") Sign Up
                                 div.text-center
                                     span Already have an account?   
                                         a(href="login.html") Sign in
