--- a/html/template/coming-soon.html
+++ b/html/template/coming-soon.html
@@ -33,7 +33,7 @@
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="index.html">
                 <h3>Coming Soon!!</h3>
                 <p class="!mb-4">We're working hard to give you the best experience!</p>
-                <div class="flex justify-center mb-[20px]">
+                <div class="flex justify-center mb-4 md:mb-3 sm:mb-2">
                   <div class="p-4 sm:p-2">
                     <ul class="timer countdown-6 flex flex-wrap gap-5 3xl:gap-3">
                       <li><span class="days time-value"></span><span class="timer-label">Days</span></li>
@@ -46,7 +46,7 @@
                 <div>
                   <input type="email" placeholder="Enter your id" required>
                 </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg !mt-2 !mb-3">Notify Me</button>
+                <button class="btn btn-primary text-white hover:drop-shadow-lg !mt-2 md:!mt-1 mb:!mt-0 !mb-3">Notify Me</button>
                 <div class="flex items-center gap-1"><i class="w-5 h-5 stroke-primary" data-feather="chevrons-left"></i><a href="index.html"> Back</a></div>
               </form>
             </div>
