--- a/html/template/otp.html
+++ b/html/template/otp.html
@@ -34,14 +34,14 @@
             <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max">
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="reset-password.html">
                 <h3>Verification Code</h3>
-                <p class="!mb-0">We have sent the code verification to your email address</p><span class="justify-center edit flex items-center gap-2 text-xs !text-primary mt-[15px]">emayiladosidorshina@gmail.com <a href="forgot-password.html"> <i class="w-5 h-5 stroke-primary" data-feather="edit-3"></i></a></span>
-                <div class="flex items-center gap-2 mt-6">
+                <p class="!mb-0">We have sent the code verification to your email address</p><span class="justify-center edit flex items-center gap-2 text-xs !text-primary mt-[15px] xl:mt-2 md:mt-0">emayiladosidorshina@gmail.com <a href="forgot-password.html"> <i class="w-5 h-5 stroke-primary" data-feather="edit-3"></i></a></span>
+                <div class="flex items-center gap-2 mt-6 xl:mt-4 md:mt-2">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(1)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(2)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(3)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(4)" maxlength="1">
                 </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg">Submit</button>
+                <button class="btn btn-primary text-white hover:drop-shadow-lg md:!mb-0 sm:!mt-2">Submit</button>
                 <div class="flex items-center justify-center gap-2"><a class="resend-otp text-xs text-primary" href="javascript:void(0)">Resend </a><span class="time flex gap-2">
                      In <span id="timer"></span></span></div>
                 <div>
