--- a/html/template/register.html
+++ b/html/template/register.html
@@ -51,7 +51,7 @@
                     <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
                   </label><span class="!text-title">Accept terms & condition</span>
                 </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg">Sign Up</button>
+                <button class="btn btn-primary text-white hover:drop-shadow-lg md:!my-2">Sign Up</button>
                 <div class="text-center"><span>Already have an account?   <a href="login.html">Sign in</a></span></div>
                 <div>
                   <h4>Or Sign in with </h4>
@@ -141,8 +141,8 @@
   <script src="../../assets/js/custom-select.js"></script>
   <!-- fontAwesome js-->
   <script src="../../assets/js/fontawesome/all.min.js"></script>
-  <!-- password hide-show js-->
-  <script src="../../assets/js/password-hide-show.js"></script>
+  <!-- password hide js -->
+  <script src="../../assets/js/password-hide-show-login.js"></script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js"> </script>
 </html>
