--- a/assets/pug/pages/template/forgot-password.pug
+++ b/assets/pug/pages/template/forgot-password.pug
@@ -21,7 +21,7 @@ html(lang='en')
                                 p Add email address to receive a verification code
                                 div
                                     input(type="email" placeholder="Enter your id.." required)
-                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg !mb-0") Send Me
+                                button.btn.btn-primary.text-white(class="hover:drop-shadow-lg !mb-0 !mt-2") Send Me
                         div(class="col-span-7 rounded-lg 2xl:col-span-6 xl:hidden")
                             div(class="relative flex items-center justify-center object-contain")
                                 img(src="../../assets/images/svg/Floor.svg" alt="" class="w-[50%]")
