--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -1145,7 +1145,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Erin M. Baker</p></a><span class="text-content">Feb 6,2023</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div>
                             <h5 class="mb-2 font-bold dark:text-white">Mobile App Development</h5>
@@ -1154,7 +1154,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"></div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">8k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">8k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1170,7 +1170,7 @@
                               </div>
                               <div><a href="blog-grid.html"> 
                                   <p class="text-title font-bold dark:text-white">Amy A. Servants</p></a><span class="text-content">Feb 2,2023</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div>
                             <h5 class="mb-2 font-bold dark:text-white">Laptop and coffee</h5>
@@ -1179,7 +1179,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">2k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">2k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1195,7 +1195,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Jackie M. Martin</p></a><span class="text-content">Jan 30,2023</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div>
                             <h5 class="mb-2 font-bold dark:text-white">Publish Policy </h5>
@@ -1204,7 +1204,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">12k views </span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">12k views </span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1220,7 +1220,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Mary S. Jelks</p></a><span class="text-content">Jan 25,2023  </span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">Revolutionizing Startups</h5>
@@ -1229,7 +1229,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">25k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">25k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1245,7 +1245,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Katherine W. McWilliams  </p></a><span class="text-content">Jan 5,2023</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">Cozy Workspace</h5>
@@ -1254,7 +1254,7 @@
                           </div>
                           <div> 
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">18k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">18k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1270,7 +1270,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Effie J. Frazier </p></a><span class="text-content">Jan 1,2023</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">The Biggest Lie In The Code </h5>
@@ -1279,7 +1279,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">6k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">6k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1295,7 +1295,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Anna G. Proas  </p></a><span class="text-content">Dec 31, 2022</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">Old School Coded </h5>
@@ -1304,7 +1304,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">25k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">25k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1320,7 +1320,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Ronald M. Spelean  </p></a><span class="text-content">Dec 27, 2022 </span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">Content Management System </h5>
@@ -1329,7 +1329,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">7k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">7k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1345,7 +1345,7 @@
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold dark:text-white">Shannon T. Clemons    </p></a><span class="text-content">Dec 5, 2022</span></div>
-                            </div><i class="h-5 stroke-content cursor-pointer" data-feather="more-vertical"></i>
+                            </div><i class="h-5 cursor-pointer stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
                             <h5 class="mb-2 font-bold dark:text-white">Myths About Code</h5>
@@ -1354,7 +1354,7 @@
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
-                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">28k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">28k views</span><i class="h-5 cursor-pointer stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
