--- a/html/template/forgot-password.html
+++ b/html/template/forgot-password.html
@@ -36,7 +36,7 @@
                 <div>
                   <input type="email" placeholder="Enter your id.." required>
                 </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg !mb-0">Send Me</button>
+                <button class="btn btn-primary text-white hover:drop-shadow-lg !mb-0 !mt-2">Send Me</button>
               </form>
             </div>
             <div class="col-span-7 rounded-lg 2xl:col-span-6 xl:hidden">
