--- a/html/template/form-validation.html
+++ b/html/template/form-validation.html
@@ -1046,9 +1046,9 @@
                           </div>
                           <div>
                             <label for="password2">Password</label>
-                            <div class="relative">
-                              <input type="password" id="password2" required="" placeholder="Enter your Password">
-                              <div class="password-icon"><i class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
+                            <div class="relative"> 
+                              <input type="password" id="password" name="Newpassword" required="" placeholder="New password">
+                              <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 " data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 " data-feather="eye-off"></i></div>
                             </div>
                           </div>
                           <div class="flex justify-end items-center">
@@ -1066,11 +1066,11 @@
          &lt;input type="email" id="email1" placeholder='Enter your email id' required=''&gt;&lt;/input&gt; 
      &lt;/div&gt;
      &lt;div class="relative"&gt;
-         &lt;label for="password2&gt;Password&lt;/label&gt; 
-         &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
+         &lt;label for="password&gt;Password&lt;/label&gt; 
+         &lt;input type="text" id="password" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
          &lt;div class="password-icon"&gt;
-            &lt;i data-feather="eye" class="feather-eye2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
-            &lt;i data-feather="eye-off" class="feather-eye-off2 showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+            &lt;i data-feather="eye" class="feather-eye  cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+            &lt;i data-feather="eye-off" class="feather-eye-off  cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
          &lt;/div&gt; 
      &lt;/div&gt;
      &lt;div class="flex items-center justify-end"&gt;
@@ -1270,10 +1270,12 @@
                                 <label for="name">Username </label>
                                 <input type="text" id="name" placeholder="Enter your username" required>
                               </div>
-                              <label for="password">Password </label>
-                              <div class="relative">
-                                <input type="password" id="password" required="" placeholder="Enter your Password">
-                                <div class="password-icon"><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
+                              <div>
+                                <label for="password">Password</label>
+                                <div class="relative">
+                                  <input type="password" id="password2" name="Confirmpassword" required="" placeholder="Confirm password">
+                                  <div class="password-icon"> <i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye2" data-feather="eye" for="password2"> </i><i class="cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2 feather-eye-off2" data-feather="eye-off" for="password2"></i></div>
+                                </div>
                               </div>
                               <div class="btns flex justify-end items-center gap-3">
                                 <button class="text-xs btn btn-secondary text-white py-2 prev-2 prev !w-fit !m-0">Previous</button>
@@ -1356,8 +1358,8 @@
           &lt;div class="relative"&gt;
               &lt;input type="text" id="password2" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
               &lt;div class="password-icon"&gt;
-                 &lt;i data-feather="eye" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
-                 &lt;i data-feather="eye-off" class="showHidePassword cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                 &lt;i data-feather="eye" class="feather-eye2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
+                 &lt;i data-feather="eye-off" class="feather-eye-off2 cursor-pointer w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2"&gt; REMIND ME LATER &lt;/i&gt;
               &lt;/div&gt; 
           &lt;/div&gt;
               &lt;div class="flex items-center justify-end"&gt;
